Changed temp rest api to multipart/form